<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sign_up_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:fontFamily="@font/notosans_bold"
            android:textSize="20sp"
            android:textColor="@color/edu_black"
            android:layout_marginTop="100dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    <LinearLayout
        android:id="@+id/sing_up_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/curved_rectangle_background"
            android:ems="10"
            android:autofillHints="name"
            android:fontFamily="@font/notosans_regular"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/edu_black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/last_name_edit_text_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/curved_rectangle_background"
            android:ems="10"
            android:autofillHints="name"
            android:fontFamily="@font/notosans_regular"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/edu_black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/curved_rectangle_background"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/notosans_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/edu_black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/curved_rectangle_background"
            android:ems="10"
            android:fontFamily="@font/notosans_regular"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/edu_black"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/confirm_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:background="@drawable/curved_rectangle_background"
            android:ems="10"
            android:autofillHints="password"
            android:fontFamily="@font/notosans_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginVertical="8dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/edu_black"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/or_sign_in_with_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_sign_up_with"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/notosans_regular"
        app:layout_constraintTop_toBottomOf="@+id/sing_up_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/sign_up_linear_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/or_sign_in_with_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/google_icon"
                android:src="@drawable/google_logo"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:contentDescription="@string/facebook_icon"
                android:src="@drawable/facebook_logo"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/twitter_icon"
                android:src="@drawable/twitter_logo"/>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"
            app:cornerRadius="7dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/notosans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_linear_layout2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>