<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.PasswordSentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/mail_sent_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mail_sent_image"
            android:layout_marginTop="200dp"
            android:contentDescription="@string/mail_sent_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/password_sent_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_sent"
            android:fontFamily="@font/notosans_medium"
            android:textSize="20sp"
            android:textColor="@color/edu_black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mail_sent_image_view"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/no_courses_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_sent"
            android:fontFamily="@font/notosans_medium"
            android:textSize="16sp"
            android:textColor="@color/edu_black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/password_sent_text_view"
            app:layout_constraintStart_toStartOf="parent"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_to_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="48dp"
            app:cornerRadius="7dp"
            android:text="@string/back_to_sign_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/notosans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/no_courses_text_view"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>