<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/forgot_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="30sp"
            android:layout_marginTop="248dp"
            android:layout_marginStart="26dp"
            android:fontFamily="@font/notosans_bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>


        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="12dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/curved_rectangle_background"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:fontFamily="@font/notosans_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@color/grey"
            android:textColor="@color/edu_black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="12dp"
            app:cornerRadius="7dp"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/notosans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/notosans_regular"
                android:text= "@string/don_t_have_an_account"
                android:textColor="@color/edu_black"
                android:clickable="false"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/get_started_button"
                app:layout_constraintLeft_toLeftOf="parent"/>


            <TextView
                android:id="@+id/sign_up_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/notosans_regular"
                android:text="@string/sign_up"
                android:textColor="@color/light_blue"
                android:clickable="false"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/get_started_button"
                app:layout_constraintLeft_toRightOf="@id/textView1" />


        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>