<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/my_courses_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_courses"
                android:fontFamily="@font/notosans_bold"
                android:textSize="22sp"
                android:textColor="@color/edu_black"
                android:layout_marginTop="50dp"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <ImageView
                    android:id="@+id/no_courses_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/empty_notes_bg"
                    android:layout_marginTop="230dp"
                    android:alpha="0.8"
                    android:contentDescription="@string/no_courses_yet_background_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <TextView
                    android:id="@+id/no_courses_text_view1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_have_not_started_any_courses"
                    android:fontFamily="@font/notosans_medium"
                    android:textSize="20sp"
                    android:textColor="@color/edu_black"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/no_courses_image_view"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/no_courses_text_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/browse_through_courses_and_enroll_start_learning_today"
                    android:fontFamily="@font/notosans_medium"
                    android:textSize="14sp"
                    android:textColor="@color/edu_black"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/no_courses_text_view1"
                    app:layout_constraintStart_toStartOf="parent"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/browse_courses_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:paddingVertical="12dp"
                    android:layout_marginTop="24dp"
                    app:cornerRadius="7dp"
                    android:text="@string/browse_courses"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:fontFamily="@font/notosans_regular"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/no_courses_text_view2"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_courses_recycler"
            tools:itemCount="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>